--- a/html-css/proyecto-barberia/producto.html
+++ b/html-css/proyecto-barberia/producto.html
@@ -45,5 +45,10 @@
         </ul>
        
     </main>
+
+    <footer>
+        <img src="/img/logo-blanco.png" alt="logo-inferior">
+        <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
+    </footer>
 </body>
 </html>
