--- a/html-css/proyecto-barberia/contacto.html
+++ b/html-css/proyecto-barberia/contacto.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/contacto.css">
-    <title>Productos-Barbería Alura</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Contacto-Barbería Alura</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
 
     <main>
        
-       
+       test
     </main>
 
     <footer>
