--- a/html-css/proyecto-barberia/producto.html
+++ b/html-css/proyecto-barberia/producto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/producto.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Productos-Barbería Alura</title>
 </head>
 <body>
