fin formulario y tabla

--- a/html-css/proyecto-barberia/producto.html
+++ b/html-css/proyecto-barberia/producto.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="caja">
-            <h1><img src="/img/logo.png"></h1>
+            <h1><img src="/img/logo.png" alt="Logo de la Barbería Alura"></h1>
 
             <nav>
                 <ul class="navegacion">
@@ -26,19 +26,19 @@
         <ul class="productos">
             <li>
                 <h2>Cabello</h2>
-                <img src="/img/cabello.jpg" alt="cabello">
+                <img src="/img/cabello.jpg" alt="Imagen de cabello">
                 <p class="producto-descripcion">Con tijera o máquina, a gusto del cliente</p>
                 <p class="producto-precio">$ 10.00</p>
             </li>
             <li>
                 <h2>Barba </h2>
-                <img src="/img/barba.jpg" alt="barba">
+                <img src="/img/barba.jpg" alt="Imagen de la barba">
                 <p class="producto-descripcion">Corte y diseño profesional de barba</p>
                 <p class="producto-precio">$ 08.00</p>
             </li>
             <li>
                 <h2>Cabello + Barba</h2>
-                <img src="/img/cabello+barba.jpg" alt="cabello+barba">
+                <img src="/img/cabello+barba.jpg" alt="Imagen de cabello+barba">
                 <p class="producto-descripcion">Paquete completo de cabello y barba</p>
                 <p class="producto-precio">$ 15.00</p>
             </li>
@@ -47,7 +47,7 @@
     </main>
 
     <footer>
-        <img src="/img/logo-blanco.png" alt="logo-inferior">
+        <img src="/img/logo-blanco.png" alt="Logo de la Barbería Alura">
         <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
     </footer>
 </body>
