--- a/html-css/proyecto-barberia/index.html
+++ b/html-css/proyecto-barberia/index.html
@@ -65,6 +65,10 @@
                </ul>
                <img src="img/diferenciales.jpg" class="imagenDiferenciales">
           </section>
+
+          <div class="video">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+           </div>
      
      </main> 
     
