--- a/html-css/proyecto-barberia/index.html
+++ b/html-css/proyecto-barberia/index.html
@@ -57,13 +57,18 @@
      
           <section class="diferenciales">
                <h3 class="titulo-principal">Diferenciales</h3>
-               <ul>
-                    <li class="items">Atención personalizada a los clientes</li>
-                    <li class="items">Espacio diferenciado</li>
-                    <li class="items">Localización</li>
-                    <li class="items">Profesionales calificados</li>
-               </ul>
-               <img src="img/diferenciales.jpg" class="imagenDiferenciales">
+
+               <div class="contenido-diferenciales">
+                    <ul class="lista-diferenciales">
+                         <li class="items">Atención personalizada a los clientes</li>
+                         <li class="items">Espacio diferenciado</li>
+                         <li class="items">Localización</li>
+                         <li class="items">Profesionales calificados</li>
+                         <li class="items">Puntualidad</li>
+                         <li class="items">Limpieza</li>
+                    </ul><img src="img/diferenciales.jpg" class="imagen-diferenciales">   
+               </div>
+               
           </section>
 
           <div class="video">
